--- a/FoutloosTypen/FoutloosTypen.app.csproj
+++ b/FoutloosTypen/FoutloosTypen.app.csproj
@@ -64,4 +64,13 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.5" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="ViewModel\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\ConsoleApp1\FoutloosTypen.Core.Data.csproj" />
+	  <ProjectReference Include="..\FoutloosTypen.Core\FoutloosTypen.Core.csproj" />
+	</ItemGroup>
+
 </Project>
